######## 2016-03-23 ########
alter table flashsale_activity_entry add share_icon varchar(128) NOT NULL;
alter table flashsale_activity_entry add share_link varchar(256) NOT NULL;
######## 2016-03-22 ########
alter table supplychain_supply_supplier add column ware_by smallint default 1;
alter table flashsale_activity_entry add act_type varchar(8) NOT NULL;
alter table flashsale_activity_entry add extras varchar(5012) NOT NULL default '{}';
alter table flashsale_activity_entry add order_val int(11) NOT NULL;
######## 2016-03-17 ########
alter table supplychain_supply_supplier add column buyer_id int(11) default null references auth_user(id);
######## 2016-03-14 ########
alter table xiaolumm_xiaolumama add column qrcode_link varchar(256) NOT NULL DEFAULT '';
######## 2016-03-09 ########
alter table supplychain_supply_schedule_manage_detail add column is_approved tinyint(1) default 0;
######## 2016-03-07 ########
alter table flashsale_xlmm_fans add column fans_nick varchar(32) default null;
alter table flashsale_xlmm_fans add column fans_thumbnail varchar(256) default null;
######## 2016-03-05 ########
alter table flashsale_refund add column ware_by int(11) NOT NULL;
alter table flashsale_mmexam_question add column created datetime NOT NULL;
alter table flashsale_mmexam_question add column modified datetime NOT NULL;
update flashsale_mmexam_question set created=now(),modified=now() where id != 0;

alter table flashsale_mmexam_choice add column created datetime NOT NULL;
alter table flashsale_mmexam_choice add column modified datetime NOT NULL;
update flashsale_mmexam_choice set created=now(),modified=now() where id != 0;

alter table flashsale_mmexam_result add column created datetime NOT NULL;
alter table flashsale_mmexam_result add column modified datetime NOT NULL;
update flashsale_mmexam_result set created=now(),modified=now() where id != 0;

alter table flashsale_mmexam_result add column daili_age int(11) NOT NULL;